feat(presets): handle moving of presets